# bazel-playground

go/: BUILD.bazel  WORKSPACE  bazel-bin  bazel-go  bazel-out  bazel-testlogs  go.mod  main.go
go/pkg/random/: BUILD.bazel  random.go
go/pkg/uuid/: BUILD.bazel  uuid.go
